--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,9 @@ dw_php_codehinting.config
 # Modules #
 ###########
 node_modules/
-npm_modules
-bower_components
-_webdata
+npm_modules/
+bower_components/
+_webdata/
 
 
 
